--- a/proyecto2_202102651/build.xml
+++ b/proyecto2_202102651/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="[IPC1-PROYECTO2]202100054" default="default" basedir=".">
-    <description>Builds, tests, and runs the project [IPC1-PROYECTO2]202100054.</description>
+<project name="proyecto2_202102651" default="default" basedir=".">
+    <description>Builds, tests, and runs the project proyecto2_202102651.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="[IPC1-PROYECTO2]202100054-impl.jar">
+        <target name="run" depends="proyecto2_202102651-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
